{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 71,
  "lineage": "a4406d58-c658-bf04-65b8-bd4410a7b1e3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/zones/us-east1-b/instanceGroups/mig-group-2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/zones/us-west1-b/instanceGroups/mig-group-1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-11-17T01:33:14.299-08:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "-QN0_lW3eSI=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/healthChecks/autohealing-health-check"
            ],
            "id": "projects/gcpsubhrajyoti-test-project/global/backendServices/multi-mig-lb-http-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "multi-mig-lb-http-backend-service",
            "port_name": "http",
            "project": "gcpsubhrajyoti-test-project",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/backendServices/multi-mig-lb-http-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.mig1",
            "google_compute_instance_group_manager.mig2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-17T01:32:07.388-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcpsubhrajyoti-test-project/global/firewalls/multi-mig-lb-http-fw-allow-hc",
            "log_config": [],
            "name": "multi-mig-lb-http-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http",
            "priority": 1000,
            "project": "gcpsubhrajyoti-test-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/firewalls/multi-mig-lb-http-fw-allow-hc",
            "source_ranges": [
              "10.126.0.0/20",
              "10.127.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "static-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.163.251",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-17T01:31:44.591-08:00",
            "id": "projects/gcpsubhrajyoti-test-project/global/addresses/multi-mig-lb-http-static-ip",
            "name": "multi-mig-lb-http-static-ip",
            "prefix_length": 0,
            "project": "gcpsubhrajyoti-test-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/addresses/multi-mig-lb-http-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gcpsubhrajyoti-test-project/global/forwardingRules/multi-mig-lb-http-forwarding-rule",
            "ip_address": "projects/gcpsubhrajyoti-test-project/global/addresses/multi-mig-lb-http-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "multi-mig-lb-http-forwarding-rule",
            "port_range": "80",
            "project": "gcpsubhrajyoti-test-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/forwardingRules/multi-mig-lb-http-forwarding-rule",
            "target": "projects/gcpsubhrajyoti-test-project/global/targetHttpProxies/multi-mig-lb-http-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.static-ip",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.mig1",
            "google_compute_instance_group_manager.mig2",
            "google_compute_instance_template.mig-template-1",
            "google_compute_instance_template.mig-template-2",
            "google_compute_network.vpc-network",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http",
            "mtu": 0,
            "name": "multi-mig-lb-http",
            "project": "gcpsubhrajyoti-test-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T01:32:08.198-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcpsubhrajyoti-test-project/regions/us-west1/routers/multi-mig-lb-http-gw-group1",
            "name": "multi-mig-lb-http-gw-group1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http",
            "project": "gcpsubhrajyoti-test-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/regions/us-west1/routers/multi-mig-lb-http-gw-group1"
          },
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T01:32:08.417-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcpsubhrajyoti-test-project/regions/us-east1/routers/multi-mig-lb-http-gw-group2",
            "name": "multi-mig-lb-http-gw-group2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http",
            "project": "gcpsubhrajyoti-test-project",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/regions/us-east1/routers/multi-mig-lb-http-gw-group2"
          },
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud-nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcpsubhrajyoti-test-project/us-west1/multi-mig-lb-http-gw-group1/multi-mig-lb-http-cloud-nat-group1",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "multi-mig-lb-http-cloud-nat-group1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcpsubhrajyoti-test-project",
            "region": "us-west1",
            "router": "multi-mig-lb-http-gw-group1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-network",
            "google_compute_router.group1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud-nat-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcpsubhrajyoti-test-project/us-east1/multi-mig-lb-http-gw-group2/multi-mig-lb-http-cloud-nat-group2",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "multi-mig-lb-http-cloud-nat-group2",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcpsubhrajyoti-test-project",
            "region": "us-east1",
            "router": "multi-mig-lb-http-gw-group2",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-network",
            "google_compute_router.group2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T01:32:08.814-08:00",
            "gateway_address": "10.126.0.1",
            "id": "projects/gcpsubhrajyoti-test-project/regions/us-west1/subnetworks/multi-mig-lb-http-group1",
            "ip_cidr_range": "10.126.0.0/20",
            "name": "multi-mig-lb-http-group1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcpsubhrajyoti-test-project",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/regions/us-west1/subnetworks/multi-mig-lb-http-group1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T01:32:08.516-08:00",
            "gateway_address": "10.127.0.1",
            "id": "projects/gcpsubhrajyoti-test-project/regions/us-east1/subnetworks/multi-mig-lb-http-group2",
            "ip_cidr_range": "10.127.0.0/20",
            "name": "multi-mig-lb-http-group2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/networks/multi-mig-lb-http",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcpsubhrajyoti-test-project",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/regions/us-east1/subnetworks/multi-mig-lb-http-group2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T01:33:49.429-08:00",
            "id": "projects/gcpsubhrajyoti-test-project/global/targetHttpProxies/multi-mig-lb-http-target-http-proxy",
            "name": "multi-mig-lb-http-target-http-proxy",
            "project": "gcpsubhrajyoti-test-project",
            "proxy_bind": false,
            "proxy_id": 3724620827964490002,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/targetHttpProxies/multi-mig-lb-http-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/urlMaps/multi-mig-lb-http-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.mig1",
            "google_compute_instance_group_manager.mig2",
            "google_compute_instance_template.mig-template-1",
            "google_compute_instance_template.mig-template-2",
            "google_compute_network.vpc-network",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T01:33:36.962-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/backendServices/multi-mig-lb-http-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "WMdL27nn4SY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcpsubhrajyoti-test-project/global/urlMaps/multi-mig-lb-http-url-map",
            "map_id": 5905634963521814815,
            "name": "multi-mig-lb-http-url-map",
            "path_matcher": [],
            "project": "gcpsubhrajyoti-test-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpsubhrajyoti-test-project/global/urlMaps/multi-mig-lb-http-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.mig1",
            "google_compute_instance_group_manager.mig2",
            "google_compute_instance_template.mig-template-1",
            "google_compute_instance_template.mig-template-2",
            "google_compute_network.vpc-network",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2"
          ]
        }
      ]
    }
  ]
}